Exercise/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: "nginx"
  rules:
  - host: argocd.cloudnative-learn.com
    http:
      paths:
        - backend:
            service:
              name: gohttpserver-service
              port:
                number: 80
          path: /
          pathType: Prefix
